--- a/index.html
+++ b/index.html
@@ -134,7 +134,6 @@
 				<img src="imgs/prehistoria/mamut.png" alt="" class="mamut">
 			</div>
 			<div id="prehistoria-dos" class="cont  prehisDos">
-				
 				<div class="suelo"></div>
 				<div class="introduccion cartelPrehi">
 					<img src="imgs/prehistoria/cartelIntroduccion.png" alt="">
@@ -280,7 +279,7 @@
 				<img src="imgs/roma/arbolRoma.png" alt="" class="arbol moverArboles">
 				<img src="imgs/roma/arbolRomaDos.png" alt="" class="arbolDos moverArboles">
 				<div class="romano"></div>
-				<div class="mensajeInfos">
+				<div class="mensajeInfos2">
 					<img src="imgs/iconos/borbuja_Mensaje.png" alt="" class="iconoMensajeRoma">
 					<div class="circu1"></div>
 					<div class="circu2"></div>
@@ -368,7 +367,7 @@
 				<img src="imgs/enigma/arbolEnigma.png" alt="" class="arbol moverArboles ">
 				<img src="imgs/enigma/arbolEnigmaDos.png" alt="" class="arbolDos moverArboles ">
 				<div class="arlequin"></div>
-				<div class="mensajeInfos">
+				<div class="mensajeInfos3">
 					<img src="imgs/iconos/borbuja_Mensaje.png" alt="" class="iconoMensajeEnigma">
 					<div class="circu1"></div>
 					<div class="circu2"></div>
