--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
 				</div>
 				<div class="borbuja">
 					<img src="imgs/borbuja.png" alt="">
-					<p>En 1844 se hizo la primera presentación de gimnasia con aparatos en la ciudad de Saint Gall <br>en el país de Suiza. Hacía los años de 1880 se comenzaron hacer <br>competiciones entre escuelas y organizaciones culturales en toda Europa. </p>
+					<p>En 1844 se hizo la primera presentación de gimnasia <br> con aparatos en la ciudad de Saint Gall en el país de Suiza.<br> Hacía los años de 1880 se comenzaron hacer competiciones <br> entre escuelas y organizaciones culturales en toda Europa. </p>
 				</div>
 				
 				<img class="suelo" src="imgs/moderna/suelo.png" alt="">
